<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <android.support.design.widget.CoordinatorLayout
        android:id="@+id/coordinator_layout_detail"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activity.DetailActivity">

        <android.support.design.widget.AppBarLayout
            android:id="@+id/main_appbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fitsSystemWindows="true">

            <android.support.design.widget.CollapsingToolbarLayout
                android:id="@+id/collapsed_movie_title"
                android:layout_width="match_parent"
                android:layout_height="@dimen/activity_detail_img_toolbar"
                android:fitsSystemWindows="true"
                app:collapsedTitleTextAppearance="@style/MovieDetailTitleCollapsed"
                app:contentScrim="?attr/colorPrimary"
                app:expandedTitleTextAppearance="@style/MovieDetailTitleExpanded"
                app:layout_scrollFlags="scroll|exitUntilCollapsed">

                <ImageView
                    android:id="@+id/movie_poster_iv"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/activity_detail_img_toolbar"
                    android:layout_centerInParent="true"
                    android:contentDescription="@string/movielist_poster_content"
                    android:scaleType="centerCrop"
                    app:layout_collapseMode="parallax" />

                <android.support.v7.widget.Toolbar
                    android:id="@+id/toolbar_movie_detail"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    android:background="@android:color/transparent"
                    app:layout_collapseMode="pin" />
            </android.support.design.widget.CollapsingToolbarLayout>

        </android.support.design.widget.AppBarLayout>
        <android.support.design.widget.FloatingActionButton
            android:id="@+id/favorite_movie_fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/activity_main_margin16"
            app:layout_anchor="@+id/main_appbar"
            app:layout_anchorGravity="bottom|end"
            app:backgroundTint="@color/movieDetailNoFavoriteFAB"
            android:src="@drawable/ic_favorite_24dp" />
        <android.support.v4.widget.NestedScrollView
            android:id="@+id/nested_scroll_detail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">
            <android.support.constraint.ConstraintLayout
                android:id="@+id/constraint_movie_detail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/movie_detail_poster_iv"
                    android:layout_width="@dimen/activity_detail_posterimg_width"
                    android:layout_height="@dimen/activity_detail_posterimg_height"
                    android:layout_marginLeft="@dimen/activity_main_margin16"
                    android:layout_marginTop="@dimen/activity_main_margin8"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toLeftOf="@+id/movie_releasedate_label_id"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/movie_releasedate_label_id"
                    style="@style/MovieDetailLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/movie_releasedate_label"
                    app:layout_constraintBottom_toTopOf="@+id/movie_releasedate_tv"
                    app:layout_constraintLeft_toRightOf="@+id/movie_detail_poster_iv"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="@string/movie_releasedate_label" />

                <TextView
                    android:id="@+id/movie_releasedate_tv"
                    style="@style/MovieDetailData"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintLeft_toRightOf="@+id/movie_detail_poster_iv"
                    app:layout_constraintTop_toBottomOf="@+id/movie_releasedate_label_id"
                    tools:text="January 2018" />

                <TextView
                    android:id="@+id/movie_rating_label_id"
                    style="@style/MovieDetailLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/movie_rating_label"
                    app:layout_constraintLeft_toRightOf="@+id/movie_detail_poster_iv"
                    app:layout_constraintTop_toBottomOf="@+id/movie_releasedate_tv"
                    tools:text="@string/movie_rating_label" />

                <TextView
                    android:id="@+id/movie_rating_value_id"
                    style="@style/MovieDetailData"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    app:layout_constraintLeft_toRightOf="@+id/movie_detail_poster_iv"
                    app:layout_constraintRight_toLeftOf="@+id/movie_rating_iv"
                    app:layout_constraintTop_toBottomOf="@+id/movie_rating_label_id"
                    tools:text="4.5" />

                <ImageView
                    android:id="@+id/movie_rating_iv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/activity_main_margin8"
                    android:contentDescription="@string/movie_rating_label"
                    android:src="@drawable/ic_star_24dp"
                    app:layout_constraintLeft_toRightOf="@+id/movie_rating_value_id"
                    app:layout_constraintTop_toBottomOf="@+id/movie_rating_label_id" />

                <TextView
                    android:id="@+id/movie_rating_votes_id"
                    style="@style/MovieDetailData"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/activity_main_margin8"
                    app:layout_constraintLeft_toRightOf="@+id/movie_rating_iv"
                    app:layout_constraintTop_toBottomOf="@+id/movie_rating_label_id"
                    tools:text="(1000)" />

                <TextView
                    android:id="@+id/movie_synopsis_label_id"
                    style="@style/MovieDetailLabel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/movie_synopsis_label"
                    app:layout_constraintBottom_toTopOf="@+id/movie_synopsis_tv"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/movie_detail_poster_iv"
                    tools:text="@string/movie_synopsis_label" />

                <TextView
                    android:id="@+id/movie_synopsis_tv"
                    style="@style/MovieDetailData"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/movie_synopsis_label_id"
                    tools:text="Movie description and more description" />
                <TextView
                    android:id="@+id/movie_trailer_label_id"
                    style="@style/MovieDetailLabel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/movie_trailer_label"
                    app:layout_constraintBottom_toTopOf="@+id/movie_trailer_recycler"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/movie_synopsis_tv"
                    tools:text="@string/movie_trailer_label" />
                <android.support.v7.widget.RecyclerView
                    android:id="@+id/movie_trailer_recycler"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/activity_main_margin8"
                    app:layout_constraintTop_toBottomOf="@+id/movie_trailer_label_id"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintBottom_toTopOf="@+id/movie_review_label_tv">
                </android.support.v7.widget.RecyclerView>
                <TextView
                    android:id="@+id/error_trailer_message_tv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/MovieDetailData"
                    android:visibility="gone"
                    android:text="@string/empty_movie_trailer_label"
                    app:layout_constraintTop_toBottomOf="@+id/movie_trailer_label_id"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintBottom_toTopOf="@+id/movie_review_label_tv"
                    />
                <TextView
                    android:id="@+id/movie_review_label_tv"
                    style="@style/MovieDetailLabel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/movie_review_label"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/movie_trailer_recycler"
                    app:layout_constraintBottom_toTopOf="@+id/movie_review_recycler"
                    tools:text="@string/movie_trailer_label" />
                <android.support.v7.widget.RecyclerView
                    android:id="@+id/movie_review_recycler"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxHeight="200dp"
                    android:layout_marginTop="@dimen/activity_main_margin8"
                    android:layout_marginBottom="@dimen/activity_main_margin8"
                    app:layout_constraintTop_toBottomOf="@+id/movie_review_label_tv"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent">
                </android.support.v7.widget.RecyclerView>
                <TextView
                    android:id="@+id/error_review_message_tv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/MovieDetailData"
                    android:visibility="gone"
                    android:text="@string/empty_movie_review_label"
                    app:layout_constraintTop_toBottomOf="@+id/movie_review_label_tv"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    />
                <ProgressBar
                    android:id="@+id/loading_detail_progress"
                    style="?android:attr/progressBarStyleLarge"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:visibility="gone"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </android.support.constraint.ConstraintLayout>
        </android.support.v4.widget.NestedScrollView>
    </android.support.design.widget.CoordinatorLayout>
</layout>